# shiroko

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: asciiFunctions.hpp  shiroko-image.cpp  shiroko-video.cpp  shiroko.cpp  shiroko.h  shiroko.hpp  terminalFunctions.hpp
